--- a/level1service/hello-world-srv/app/index.html
+++ b/level1service/hello-world-srv/app/index.html
@@ -23,8 +23,8 @@
     </script>
     <script src="https://sapui5.hana.ondemand.com/test-resources/sap/ushell/bootstrap/sandbox.js"></script>
     <script
-      src="https://sapui5.hana.ondemand.com/1.70.1/resources/sap-ui-core.js"
-      data-sap-ui-libs="sap.m, sap.ushell, sap.collaboration, sap.ui.layout"
+      src="https://sapui5.hana.ondemand.com/1.107.0/resources/sap-ui-core.js"
+      data-sap-ui-libs="sap.m, sap.ui.fl, sap.ushell, sap.collaboration, sap.ui.layout"
       data-sap-ui-compatVersion="edge"
       data-sap-ui-theme="sap_belize"
       data-sap-ui-resourceroots='{
